src/test/ui/issues/issue-6596-2.stderr
error: unknown macro variable `nonexistent`
  --> $DIR/issue-6596-2.rs:5:16
   |
LL |         { $inp $nonexistent }
   |                ^^^^^^^^^^^^ unknown macro variable
...
LL |     g!(foo);
   |     -------- in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

